# Bilingual

./: .pre-commit-config.yaml  .test.yaml  .translation_commits.json  CLAUDE.en.md  CLAUDE.ja.md  Claudeff.md  Readme..md  Readme.en.md  Readme.ja.md  Readme.md  Tasks.ja.md  Test.ja.md  Test.md  Test1.en.md  Test1.ja.md  Test1.md  Test2.en.md  Test2.ja.md  Test2.md  Test3.ja.md  Test3.md  TestFileTocheckprecommit.en.md  TestFileTocheckprecommit.ja.md  TestFileTocheckprecommit.md  ai-context.yaml  pyproject.toml  test1.ja.md
.claude/: Test.en.md  Test.ja.md  Test2.ja.md  Text.md
.claude/commands/: Test1.md
.cursor/comms/: Test1.md
.github/workflows/: pre-commit.yaml  trigger-markdown-translation.yaml
Test/: Test2.en.md  Test2.ja.md  Test3.en.md  Test3.ja.md  Testx.en.md  Testx.ja.md  Testx.md
Test/TestSub/: Test5.ja.md
Test1/: Readme.en.md  Readme.ja.md  Readme.md  test1.ja.md  test1.md
Test2/: Test2.ja.md  Test2.md  Test33.en.md  Test33.ja.md  TestFInalPlease.en.md  TestFInalPlease.ja.md
Test4/: Tasks.en.md  Tasks.ja.md  newTest.en.md  newTest.ja.md  test1.en.md  test1.ja.md
Textx/: Test3.en.md
docs/: test.ja.md  test.md
docs.ja/: test.md
test/: Readme.md
tests/clusters/: test_clustering.py
tests/clusters/files/: test1.txt
tests/completions/: test_completion.py
tests/prompts/headings/: test_prompt.py
tests/prompts/queries/: test_prompt_queries.py
tests/reports/: test_reports.py
tests/reports/files/: custom.json  decisions.json  statements.json  summary.json  todos.json
tests/sections/: test_sections.py
tests/sections/files/: section.json  section2.json
tests/utils/: __init__.py  template.py
tools/: test.sh
