[tool.poetry]
name = "bilingual"
version = "0.1.0"
description = ""
authors = ["Your Name <harshit@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.0"
black = "^23.0.0"
autoflake = "^2.0.0"
isort = "^5.0.0"
flake8 = "^6.0.0"
bandit = "^1.7.0"
mypy = "^1.0.0"
# Add your other dependencies here

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.0"
# Add your other dev dependencies here
